[project]
name = "elasticapp"
version = "0.0.3"
description = "A CPP accelerated backend for PyElastica kernels"
# readme = "README.rst" # for long description
requires-python = ">=3.10"
license = {text = "MIT License"}

# this is a list that can be expanded
authors = [{name = "Seung Hyun Kim", email = "skim0119@gmail.com"}]

# classifiers can be added here, later
classifiers = [
]

[project.urls]
"Homepage" = "https://github.com/GazzolaLab/PyElastica/"
"Bug Reports" = "https://github.com/GazzolaLab/PyElastica/issues"
"Source" = "https://github.com/GazzolaLab/PyElastica/"
"Documentation" = "https://docs.cosseratrods.org/"

[build-system]
requires = ["meson-python", "pybind11"]
build-backend = "mesonpy"

[tool.meson-python.args]
setup = ['-Doptimization=3']

# [tool.mypy]
# files = "setup.py"
# python_version = "3.7"
# strict = true
# show_error_codes = true
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# warn_unreachable = true
# 
# [[tool.mypy.overrides]]
# module = ["ninja"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
